[gd_scene load_steps=11 format=3 uid="uid://big2aesgryksx"]

[ext_resource type="Script" path="res://environment/object_resources/tileset/4 Animated objects/scripts/moneda.gd" id="1_5dd0d"]
[ext_resource type="Texture2D" uid="uid://c76rnnqryykwh" path="res://environment/object_resources/tileset/4 Animated objects/img/Coin.png" id="1_althf"]
[ext_resource type="AudioStream" uid="uid://bh1ttjvhtkul8" path="res://environment/object_resources/tileset/4 Animated objects/audio/collect-points-190037.mp3" id="3_c0wp3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jgs4k"]
atlas = ExtResource("1_althf")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn32g"]
atlas = ExtResource("1_althf")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn68s"]
atlas = ExtResource("1_althf")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj4wy"]
atlas = ExtResource("1_althf")
region = Rect2(30, 0, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_kuswe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgs4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn32g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn68s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj4wy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4rfcn"]
radius = 5.52268

[sub_resource type="CircleShape2D" id="CircleShape2D_382el"]
radius = 18.0278

[node name="moneda" type="RigidBody2D"]
script = ExtResource("1_5dd0d")

[node name="ani_moneda" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_kuswe")
animation = &"idle"
frame_progress = 0.175887

[node name="col_moneda" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.5)
shape = SubResource("CircleShape2D_4rfcn")

[node name="area_moneda" type="Area2D" parent="."]

[node name="col_area" type="CollisionShape2D" parent="area_moneda"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_382el")

[node name="audio_moneda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c0wp3")
